--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,10 @@ services:
     volumes:
       - mssql_data:/var/opt/mssql
     healthcheck:
-      test: ["CMD-SHELL", "/opt/mssql-tools18/bin/sqlcmd -S localhost -U SA -P $${MSSQL_SA_PASSWORD} -C -Q 'SELECT 1'"]
+      test: [
+        "CMD-SHELL",
+        "/opt/mssql-tools18/bin/sqlcmd -S localhost -U SA -P $${MSSQL_SA_PASSWORD} -C -Q 'SELECT 1'"
+      ]
       interval: 10s
       timeout: 5s
       retries: 10
@@ -32,6 +35,30 @@ services:
       -P Yoz0id3An0! 
       -C 
       -i /init.sql
+
+  backend:
+    container_name: user-api
+    build:
+      context: ./UserServiceAPI
+      dockerfile: Dockerfile
+    ports:
+      - "5161:5161"
+    environment:
+      ASPNETCORE_URLS: "http://0.0.0.0:5161"
+
+
+
+  frontend:
+    build:
+      context: ./frontperson
+      dockerfile: Dockerfile
+    container_name: next-frontend
+    environment:
+      NEXT_PUBLIC_API_URL: "http://localhost:5161"
+    depends_on:
+      - backend
+    ports:
+      - "3000:3000"
 
 volumes:
   mssql_data:
