--- a/UserServiceAPI/Dockerfile
+++ b/UserServiceAPI/Dockerfile
@@ -1,4 +1,3 @@
-# Etapa BUILD
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 WORKDIR /src
 
@@ -6,14 +5,13 @@ COPY UserServiceAPI/*.csproj ./
 RUN dotnet restore
 
 COPY UserServiceAPI/. .
-RUN dotnet publish -c Release -o /app/publish --no-restore
+RUN dotnet publish -c Release -o /app/publish
 
-# Etapa RUNTIME
 FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS final
 WORKDIR /app
 COPY --from=build /app/publish .
 
-ENV ASPNETCORE_URLS=http://0.0.0.0:5161
-EXPOSE 5161
+ENV ASPNETCORE_URLS=http://0.0.0.0:8080
+EXPOSE 8080
 
 ENTRYPOINT ["dotnet", "UserServiceAPI.dll"]
